test/files/neg/t1548.check
S.scala:2: error: method defaultMethod overrides nothing
  override def defaultMethod = "Boo!"
               ^
1 error
